--- a/src/LarpManager/Views/public/groupe/declareWar.twig
+++ b/src/LarpManager/Views/public/groupe/declareWar.twig
@@ -12,7 +12,7 @@
 	
 	<div class="well bs-component">
 	
-		<form action="{{ path('groupe.declareWar', {'groupe': groupe.id}) }}" method="POST" {{ form_enctype(form) }}>
+		<form action="{{ path('groupe.declareWar', {'groupe': groupe.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
 			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 
 			{{ form(form) }}
