--- a/src/LarpManager/Views/public/groupe/fragment/groupe.twig
+++ b/src/LarpManager/Views/public/groupe/fragment/groupe.twig
@@ -8,6 +8,8 @@ Vous êtes responsable de ce groupe.
 </blockquote>
 {% endif %}
 
+<p>{{ groupe.description|markdown }}</p>
+
 <div class="header">
 	<h5>Composition</h5>
 </div>
@@ -69,21 +71,68 @@ Vous êtes responsable de ce groupe.
 </div>
 
 <blockquote>
+{% if app.user.isResponsable(groupe) %}
 	<p>Vous disposez de <strong>{{ groupe.alliances|length }}</strong> alliance(s) sur un maximum de <strong>3</strong>.</p>
 	<p>Vous pouvez choisir <strong>{{ groupe.ennemies|length - groupe.alliances|length }}</strong> allié(s) supplémentaire(s).</p>
 	<p>Votre nombre d'ennemis doit toujours être supérieur à votre nombre d'alliés. Pour augmenter le nombe d'alliance possible (jusqu'à un maximum de 3), choisissez plus d'ennemis</p>
+{% else %}
+	<p>Votre chef de groupe a la possibilité de gérer les alliances.</p>
+{% endif %}
 </blockquote>
 
 <ul class="list-group">
 {% for alliance in groupe.alliances %}
-	<li class="list-group-item">{{ alliance.groupe }} / <a href="#">Rompre cette alliance</a></li>
+	<li class="list-group-item">
+		<div class="row">
+			<div class="col-md-8">
+				{{ alliance.groupe }}
+			</div>
+			<div class="col-md-4">
+				<a href="{{ path('groupe.breakAlliance', {'groupe': groupe.id, 'alliance': alliance.id}) }}">Rompre cette alliance</a>
+			</div>
+		</div>
+	</li>
+		
 {% else %}
 	Vous n'avez aucun alliés.
 {% endfor %}
 </ul>
 
 {% if app.user.isResponsable(groupe) %}
-	<a class="btn btn-default" href="{{ path('groupe.requestAlliance', {'groupe': groupe.id}) }}">Demander une alliance</a>
+
+	{% if groupe.waitingAlliances|length > 0 %}
+		<div class="header">
+			<h5>Négociations en cours</h5>
+		</div>
+		
+		<ul class="list-group">
+		{% for alliance in groupe.waitingAlliances %}
+			<li class="list-group-item">
+				{% if alliance.groupe == groupe %}
+					<div class="row">
+						<div class="col-md-8">
+							Vous avez demandé une alliance avec <strong>{{ alliance.requestedGroupe }}</strong>.
+						</div>
+						<div class="col-md-4">
+							<a href="{{ path('groupe.cancelRequestedAlliance', {'groupe': groupe.id, 'alliance': alliance.id}) }}">Annuler la demande</a>
+						</div>
+					</div>
+				{% else %}
+					<div class="row">
+						<div class="col-md-8">
+							<strong>{{ alliance.groupe }}</strong> vous a demandé une alliance.
+						</div>
+						<div class="col-md-4">
+							<a href="{{ path('groupe.acceptAlliance', {'groupe': groupe.id, 'alliance': alliance.id}) }}">Accepter la demande</a>
+							<a href="{{ path('groupe.refuseAlliance', {'groupe': groupe.id, 'alliance': alliance.id}) }}">Refuser la demande</a>
+						</div>
+					</div>
+				{% endif %}
+			</li>
+		{% endfor %}	
+		</ul>
+	{% endif %}
+
 {% endif %}
 
 <div class="header">
@@ -91,18 +140,90 @@ Vous êtes responsable de ce groupe.
 </div>
 
 <blockquote>
+{% if app.user.isResponsable(groupe) %}
 	<p>Vous disposez de <strong>{{ groupe.ennemies|length }}</strong> ennemi(s) sur un maximum de <strong>5</strong>.</p>
 	<p>Si vous avez 3 ennemis ou plus, vous ne pouvez plus faire de Déclaration de guerre (mais vous pouvez toujours en recevoir)</p>
 	<p>Etre l’ennemi d’un groupe ne signifie pas que vous devez tuer à vue ses membres, simplement que vous avez un différent important à régler avec lui. Le but est de générer du jeu, pas de l’appauvrir en générant des massacres.</p>
+{% else %}
+	<p>Votre chef de groupe a la possibilité de gérer les alliances.</p>
+{% endif %}
 </blockquote>
+
 <ul class="list-group">
 {% for ennemi in groupe.ennemies %}
-	<li class="list-group-item">{{ ennemi.groupe }} / <a href="#">Proposer de faire la paix</a></li>
-{% else %}
-	Vous n'avez aucun ennemis.
+	<li class="list-group-item">
+		<div class="row">
+			<div class="col-md-8">
+				{% if ennemi.groupe == groupe %}
+					Vous avez déclaré la guerre à <strong>{{ ennemi.requestedGroupe }}</strong>.
+				{% else %}
+					<strong>{{ ennemi.groupe }}</strong> vous a déclaré la guerre.
+				{% endif %}
+			</div>
+			<div class="col-md-4">
+				{% if app.user.isResponsable(groupe) %}<a href="{{ path('groupe.requestPeace', {'groupe': groupe.id, 'enemy': ennemi.id}) }}">Proposer de faire la paix</a>{% endif %}
+			</div>
+		</div>
+	</li>	
 {% endfor %}
 </ul>
 
 {% if app.user.isResponsable(groupe) %}
-	<a class="btn btn-default" href="{{ path('groupe.declareWar', {'groupe': groupe.id}) }}">Choisir un ennemi</a>
+
+	{% if groupe.waitingPeace|length > 0 %}
+		<div class="header">
+			<h5>Négociations de paix en cours</h5>
+		</div>
+		
+		<ul class="list-group">
+		{% for war in groupe.waitingPeace %}
+			<li class="list-group-item">
+				{% if war.groupe == groupe %}
+					<div class="row">
+						<div class="col-md-8">
+							Vous avez demandé la paix avec <strong>{{ war.requestedGroupe }}</strong>.
+						</div>
+						<div class="col-md-4">
+							<a href="{{ path('groupe.cancelRequestedPeace', {'groupe': groupe.id, 'enemy': war.id}) }}">Annuler la demande</a>
+						</div>
+					</div>
+				{% else %}
+					<div class="row">
+						<div class="col-md-8">
+							<strong>{{ war.groupe }}</strong> propose la paix.
+						</div>
+						<div class="col-md-4">
+							<a href="{{ path('groupe.acceptPeace', {'groupe': groupe.id, 'enemy': war.id}) }}">Accepter la demande</a>
+							<a href="{{ path('groupe.refusePeace', {'groupe': groupe.id, 'enemy': war.id}) }}">Refuser la demande</a>
+						</div>
+					</div>
+				{% endif %}
+			</li>
+		{% endfor %}	
+		</ul>
+		
+	{% endif %}
+	
+	{% if groupe.oldEnemies|length > 0 %}
+		<div class="header">
+			<h5>Vos anciens ennemis</h5>
+		</div>
+		
+		<ul class="list-group">
+			{% for war in groupe.oldEnemies %}
+				<li class="list-group-item">
+					{% if war.groupe == groupe %}
+						Vous avez fait la paix avec <strong>{{ war.requestedGroupe }}</strong>.
+					{% else %}
+						Vous avez fait la paix avec <strong>{{ war.groupe }}</strong>.
+					{% endif %}
+				</li>
+			{% endfor %}
+		</ul>
+	{% endif %}
+{% endif %}
+
+{% if app.user.isResponsable(groupe) %}
+	<a class="btn btn-success" href="{{ path('groupe.requestAlliance', {'groupe': groupe.id}) }}">Demander une alliance</a>
+	<a class="btn btn-danger" href="{{ path('groupe.declareWar', {'groupe': groupe.id}) }}">Choisir un ennemi</a>
 {% endif %}
