--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -39,7 +39,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Scénario<span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('appelation') }}">Appelations</a></li>
-						<li><a href="{{ path('territoire') }}">Territoires</a></li>
+						<li><a href="{{ path('territoire.admin.list') }}">Territoires</a></li>
 						<li><a href="{{ path('langue') }}">Langues</a></li>
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
