--- a/src/LarpManager/Views/admin/territoire/update.twig
+++ b/src/LarpManager/Views/admin/territoire/update.twig
@@ -7,7 +7,7 @@
 			<div class="col-xs-12 col-md-8">
 				<div class="well bs-component">
 				
-					<form action="{{ path('territoire.admin.add') }}" method="POST" {{ form_enctype(form) }}>
+					<form action="{{ path('territoire.admin.update', {'territoire': territoire.id}) }}" method="POST" {{ form_enctype(form) }}>
 						<fieldset>
 							<legend>Modification d'un territoire</legend>
 							{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
