--- a/src/LarpManager/Views/public/groupe/fragment/groupe.twig
+++ b/src/LarpManager/Views/public/groupe/fragment/groupe.twig
@@ -62,6 +62,11 @@ Vous êtes responsable de ce groupe.
 	<div class="col-xs-6 col-md-3">
 		{% if participant.user.trombineUrl %}
 			<img width="160" height="200" src="{{ path('trombine.get', {'trombine' : participant.user.trombineUrl }) }}" />
+			<div class="caption">
+				{% if participant.personnage %}
+					{{ participant.personnage.publicName }}
+				{% endif %}
+			</div>
 		{% endif %}
 	</div>
 {% endfor %}
