--- a/src/LarpManager/Views/public/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/detail.twig
@@ -106,7 +106,7 @@
 		{% for membre in groupeSecondaire.membres %}
 			<div class="col-xs-6 col-md-3">
 				{% if membre.personnage.participant.user.trombineUrl %}
-					<img width="160" height="200" src="{{ path('trombine.get', {'trombine' : membre.personnage.participant.user.trombineUrl }) }}" />
+					<img width="160" src="{{ path('trombine.get', {'trombine' : membre.personnage.participant.user.trombineUrl }) }}" />
 					<div class="caption">
 						{{ membre.personnage.publicName }}
 					</div>
