--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -110,7 +110,11 @@
 					{% for participant in  groupe.participants %}
 						<div class="col-xs-6 col-md-3">
 							{% if participant.user.trombineUrl %}
-								<img width="160" height="200" src="{{ path('trombine.get', {'trombine' : participant.user.trombineUrl }) }}" />
+								<img width="160" src="{{ path('trombine.get', {'trombine' : participant.user.trombineUrl }) }}" />
+								{% if participant.personnage %}
+									<div>{{ participant.personnage.publicName }}</div>
+								{% endif %}
+								<div>{{ participant.user.etatCivil.nom }} {{ participant.user.etatCivil.prenom }}</div>
 							{% endif %}
 						</div>
 					{% endfor %}
