Interface technique, trombinoscope général, divers bugs fix.

--- a/src/LarpManager/Views/admin/competence/detail.twig
+++ b/src/LarpManager/Views/admin/competence/detail.twig
@@ -41,7 +41,7 @@
 	    		
   				<div class="list-group-item">
   					<div class="btn-group" role="group" aria-label="...">
-  						<a  class="btn btn-primary" role="button" href="{{ path('competence.update', {index : competence.id}) }}">Modifier</a>
+  						<a  class="btn btn-primary" role="button" href="{{ path('competence.update', {'competence' : competence.id}) }}">Modifier</a>
 					</div>
   				</div>
 			</div>
