--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -29,6 +29,9 @@
 						<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
 						<li><a href="{{ path('right.admin.list') }}">Liste des droits</a></li>
 						<li><a href="{{ path('statistique') }}">Statistiques</a></li>
+						<li><a href="{{ path('admin') }}">Administration</a></li>
+						<li><a href="{{ path('trombinoscope') }}">Trombinoscope</a></li>
+						<li><a href="{{ path('admin.rappels') }}">rappels</a></li>
 					</ul>
 				</li>
 			{% endif %}
